# napari-denoiseg

./: .gitignore  LICENSE  README.md  codecov.yml  mkdocs.yml  napari_denoiseg.yml  pytest.ini  setup.cfg  tox.ini
.github/workflows/: pylint.yml  python-package.yml
.napari/: DESCRIPTION.md
docs/: _config.yml  documentation.md  examples.md  faq.md  index.md  installation.md
src/napari_denoiseg/: __init__.py  _batch_predict_widget.py  _batch_train_widget.py  _folder_widget.py  _patch_widget.py  _predict_widget.py  _raw_data_loader.py  _sample_data.py  _tbplot_widget.py  _threshold_widget.py  _train_widget.py  _widget.py  _widget_qt.py  napari.yaml  run.py
src/napari_denoiseg/_tests/: test_axes_widget.py  test_denoiseg_utils.py  test_expert_settings.py  test_io_utils.py  test_load_images_utils.py  test_optimizer_worker.py  test_patch_widget.py  test_prediction_worker.py  test_raw_data_loader.py  test_resources.py  test_sample_data.py  test_training_worker.py  test_utils.py  test_widget.py
src/napari_denoiseg/resources/: resources.py
src/napari_denoiseg/utils/: __init__.py  _tb_plot_widget.py  denoiseg_utils.py  expert_settings.py  io_utils.py  load_images_utils.py  optimizer_worker.py  prediction_worker.py  raw_data_loader.py  tb_plot_widget.py  text.py  training_worker.py
src/napari_denoiseg/utils/widgets/: __init__.py  magicgui_widgets.py
src/napari_denoiseg/widgets/: __init__.py  axes_widget.py  banner_widget.py  expert_settings_widget.py  folder_widget.py  gpu_widget.py  magicgui_widgets.py  qt_widgets.py  tbplot_widget.py  training_expert_settings_widget.py  widget_provider.py
