[metadata]
name = napari-denoiseg
version = 0.0.1
author = jdeschamps
author_email = @jdeschamps
url = https://github.com/jdeschamps/napari-denoiseg
license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/jdeschamps/napari-denoiseg/issues
    Documentation = https://github.com/jdeschamps/napari-denoiseg#README.md
    Source Code = https://github.com/jdeschamps/napari-denoiseg
    User Support = https://github.com/jdeschamps/napari-denoiseg/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    pyqtgraph
    tensorflow>=2.7
    keras>=2.3
    csbdeep
    denoiseg>=0.2.2
    bioimageio.core

[options.packages.find]
where = src

[options.package_data]
napari-denoiseg = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-denoiseg = napari_denoiseg:napari.yaml
