[metadata]
name = napari-denoiseg
version = 0.0.1
author = Tom Burke, Joran Deschamps
author_email = joran.deschamps@fht.org
url = https://github.com/juglab/napari_denoiseg
license = BSD-3-Clause
description = A napari plugin performing joint denoising and segmentation of microscopy images using DenoiSeg.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: napari
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/juglab/napari_denoiseg/issues
    Documentation = https://juglab.github.io/napari-denoiseg/
    Source Code = https://github.com/juglab/napari_denoiseg
    User Support = https://github.com/juglab/napari_denoiseg/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    pyqtgraph
    denoiseg>=0.2.3
    bioimageio.core
    magicgui
    qtpy
    pyqtgraph

    # dependency for compatibility with napari-workflows
    napari_time_slicer >= 0.4.9

    # Also compatibility with napari-workflows
    # TODO: it might be better to refactor the napari-workflow code to another repo that would call napari-n2 so that
    # TODO: the dependencies would be a bit more relaxed.
    # TODO: pin napari to <=0.4.15? vispy<=0.9.6?
    # pin napari and vispy because
    # https://github.com/napari/napari/issues/4415
    # https://github.com/napari/napari/issues/4708
    napari<=0.4.15
    vispy<=0.9.6

    # fix to prevent failing tests
    # see https://github.com/napari/napari/pull/5168
    # and https://github.com/napari/napari/commit/c42e5ee2d1afd1f26944de3c0657e7bbc813b7d1
    imageio>=2.5.0,!=2.11.0,!=2.22.1

    # tensorflow
    tensorflow;  platform_system!="Darwin" or platform_machine!="arm64"
    tensorflow-macos;  platform_system=="Darwin" and platform_machine=="arm64"
    tensorflow-metal;  platform_system=="Darwin" and platform_machine=="arm64"

[options.extras_require]
testing =
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pyqt5

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-denoiseg = napari_denoiseg:napari.yaml
